// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`component.UI.StatusIndicator closing should render correctly 1`] = `
<styled.div
  variant="statuses.closing"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</styled.div>
`;

exports[`component.UI.StatusIndicator offline should render correctly 1`] = `
<styled.div
  variant="statuses.offline"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</styled.div>
`;

exports[`component.UI.StatusIndicator online should render correctly 1`] = `
<styled.div
  variant="statuses.online"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</styled.div>
`;

exports[`component.UI.StatusIndicator pending should render correctly 1`] = `
<styled.div
  variant="statuses.pending"
>
  <SvgCircle
    height="0.7em"
    width="0.7em"
  />
</styled.div>
`;
